# fastapi-python-monolithic-boilerplate

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: router.py
app/common/: errors.py  exception_handlers.py  responses.py
app/common/middleware/: request_id.py  security_headers.py
app/core/: config.py
app/modules/health/: router.py
app/modules/root/: router.py
app/modules/users/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
http/: requests.http
tests/: test_app.py
