[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-python-monolithic-boilerplate"
version = "0.1.0"
description = "A FastAPI modular-monolith boilerplate with tests, Docker, typed settings, and clean module boundaries."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.118,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic-settings>=2.6,<3.0",
  "email-validator>=2.2,<3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "mypy>=1.13,<2.0",
  "pytest>=8.0,<9.0",
  "pytest-cov>=5.0,<8.0",
  "ruff>=0.8,<1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
warn_unused_ignores = false
